[gd_scene load_steps=12 format=3 uid="uid://dxneb8wkso78d"]

[ext_resource type="Script" uid="uid://cvhmn6ele4hvq" path="res://scripts/police_station.gd" id="1_dmrwq"]
[ext_resource type="PackedScene" uid="uid://1lucnrhv7ixm" path="res://scenes/places/office.tscn" id="2_57o6l"]
[ext_resource type="PackedScene" uid="uid://dm8xbmol5f8en" path="res://scenes/places/Kitchen.tscn" id="3_c3stg"]
[ext_resource type="PackedScene" uid="uid://doisuir7v57ie" path="res://scenes/places/head_office.tscn" id="4_ljyy1"]
[ext_resource type="PackedScene" uid="uid://h6fwhyygn64k" path="res://scenes/places/big_office.tscn" id="5_dnta6"]
[ext_resource type="PackedScene" uid="uid://dcc1qe6wb2fvg" path="res://scenes/places/tech_room.tscn" id="6_1b4pb"]
[ext_resource type="Script" uid="uid://dcw8le38a2ymy" path="res://scripts/change_room_sys.gd" id="7_57o6l"]
[ext_resource type="Texture2D" uid="uid://hkjnjyf75j8w" path="res://assets/black.png" id="7_lt3nl"]
[ext_resource type="PackedScene" uid="uid://dinkb6rvbmkhj" path="res://scenes/helpsys.tscn" id="8_8qadg"]
[ext_resource type="Texture2D" uid="uid://crj8s6h8bbatp" path="res://assets/arrows.png" id="9_mcvgu"]
[ext_resource type="Texture2D" uid="uid://ncploay0c37s" path="res://assets/light out shadow.png" id="11_c3stg"]

[node name="PoliceStation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dmrwq")

[node name="Office" parent="." instance=ExtResource("2_57o6l")]
layout_mode = 1

[node name="HeadOffice" parent="." instance=ExtResource("4_ljyy1")]
visible = false
layout_mode = 1

[node name="BigOffice" parent="." instance=ExtResource("5_dnta6")]
visible = false
layout_mode = 1

[node name="TechRoom" parent="." instance=ExtResource("6_1b4pb")]
visible = false
layout_mode = 1

[node name="Kitchen" parent="." instance=ExtResource("3_c3stg")]
visible = false
layout_mode = 1

[node name="Change_Room_Sys" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 592.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_57o6l")

[node name="Office_button_background" type="TextureRect" parent="Change_Room_Sys"]
layout_mode = 0
offset_left = 40.0
offset_right = 168.0
offset_bottom = 48.0
texture = ExtResource("7_lt3nl")
expand_mode = 1

[node name="Office_button" type="Button" parent="Change_Room_Sys/Office_button_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Eigenes Büro"

[node name="Head_Office_button_background" type="TextureRect" parent="Change_Room_Sys"]
layout_mode = 0
offset_left = 192.0
offset_right = 320.0
offset_bottom = 48.0
texture = ExtResource("7_lt3nl")
expand_mode = 1

[node name="Head_Office_button" type="Button" parent="Change_Room_Sys/Head_Office_button_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Chef Büro"

[node name="Big_Office_button_background" type="TextureRect" parent="Change_Room_Sys"]
layout_mode = 0
offset_left = 344.0
offset_right = 472.0
offset_bottom = 48.0
texture = ExtResource("7_lt3nl")
expand_mode = 1

[node name="Big_Office_button" type="Button" parent="Change_Room_Sys/Big_Office_button_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Großes Büro"

[node name="Tech_Room_button_background" type="TextureRect" parent="Change_Room_Sys"]
layout_mode = 0
offset_left = 832.0
offset_top = -8.0
offset_right = 960.0
offset_bottom = 40.0
texture = ExtResource("7_lt3nl")
expand_mode = 1

[node name="Tech_Room_button" type="Button" parent="Change_Room_Sys/Tech_Room_button_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Technik Raum"

[node name="Kitchen_button_background" type="TextureRect" parent="Change_Room_Sys"]
layout_mode = 0
offset_left = 984.0
offset_top = -8.0
offset_right = 1112.0
offset_bottom = 40.0
texture = ExtResource("7_lt3nl")
expand_mode = 1

[node name="Kitchen_button" type="Button" parent="Change_Room_Sys/Kitchen_button_background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Küche"

[node name="Helpsys" parent="." instance=ExtResource("8_8qadg")]
layout_mode = 1
hint_1_text = "Hier findest du hinweise, wenn du nicht weiter kommst. Sie erscheinen nicht alle Direkt zu Beginn."
hint_2_text = "Wenn der Strom nicht funktioniert, lässt sich das problem vielleicht beim Stromkasten beheben. Dieser sollte sich im Technik Raum befinden"
hint_3_text = "Klicke auf den Stromkasten im Technik Raum, um den Strom zu reparieren "
Timer_hint_2_time = 15.0
Timer_hint_3_time = 20.0

[node name="show_helpsys" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 815.0
offset_top = 166.0
offset_right = 1053.0
offset_bottom = 404.0
rotation = -0.822278
texture = ExtResource("9_mcvgu")
expand_mode = 1

[node name="Timer_Blackout_beginn" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Dark_Mode_Blackout" type="Sprite2D" parent="."]
visible = false
position = Vector2(587, 332)
texture = ExtResource("11_c3stg")

[connection signal="electricity_box_pressed" from="TechRoom" to="." method="_on_tech_room_electricity_box_pressed"]
[connection signal="pressed" from="Change_Room_Sys/Office_button_background/Office_button" to="Change_Room_Sys" method="_on_office_button_pressed"]
[connection signal="pressed" from="Change_Room_Sys/Head_Office_button_background/Head_Office_button" to="Change_Room_Sys" method="_on_head_office_button_pressed"]
[connection signal="pressed" from="Change_Room_Sys/Big_Office_button_background/Big_Office_button" to="Change_Room_Sys" method="_on_big_office_button_pressed"]
[connection signal="pressed" from="Change_Room_Sys/Tech_Room_button_background/Tech_Room_button" to="Change_Room_Sys" method="_on_tech_room_button_pressed"]
[connection signal="pressed" from="Change_Room_Sys/Kitchen_button_background/Kitchen_button" to="Change_Room_Sys" method="_on_kitchen_button_pressed"]
[connection signal="questionmark_found" from="Helpsys" to="." method="_on_helpsys_questionmark_found"]
[connection signal="timeout" from="Timer_Blackout_beginn" to="." method="_on_timer_blackout_beginn_timeout"]
